gcc/testsuite/g++.dg/parse/error35.C
// PR c++/33465

int foo(double);

void bar(int i)
{
  foo(i)();  // { dg-error "foo\\(\\(double\\)i\\)" }
}
